--- a/_posts/2017-01-08-why-c.md
+++ b/_posts/2017-01-08-why-c.md
@@ -4,8 +4,7 @@ serial: 1
 title: Why C
 meta: Understanding the need to learn C
 description: We begin our journey with my very first tutorial which is just about why do we need to learn C. With so many programming languages around, we explore what is so special about C that it draws so much attention even after so many years of its birth and is it still worth learning C.
-author: Ankan Poddar
-date: 08-Jan-2017
+link: https://drive.google.com/open?id=0B_OA-RV12AhndWhPYTVwM3RGTVU
 next_post: Hello.c
 ---
 
