Added the ninth post
Modified the pdf and odt file of third post, and added the pdf
and odt for fourth post.

--- a/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
+++ b/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
@@ -6,6 +6,7 @@ meta: The number theory of computers
 description: With this one, dive into number systems and see how integers are stored in computer memory. Know the binary world of computers.
 comments: true
 category: c-tutorial-series
+link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/4_1s_and_0s.pdf
 ---
 
 As promised, we’ll get into the basic data types in this tutorial. We’ll start with the integer data type and we’ll try to have an in-depth understanding of how it is implemented in computer memory. Let’s begin.
@@ -36,7 +37,7 @@ As promised, we’ll get into the basic data types in this tutorial. We’ll sta
     }
     ```
 
-    On my computer the output looks something like this (Yours may look a little different)
+    On my computer the output looks something like this (Yours may look a little different!) –
 
     <pre class="output">
     Size of int is 4 bytes  
