Added the quick nav in posts and comments in practice section

--- a/_posts/c-tutorial-series/2017-05-20-hello-c.md
+++ b/_posts/c-tutorial-series/2017-05-20-hello-c.md
@@ -21,6 +21,8 @@ int main() {
 }
 {% endhighlight %}
 
+### Getting Started with C
+
 We’ll start from the first line. What the heck does “`#include <stdio.h>`” mean? It is called the #include directive. Would it make sense if I told you this line tells the preprocessor to include the contents of the header file stdio.h into the compiled code of the program? Probably not. So many fancy terms, ehh? I will break it down later in this tutorial I promise. For now it will suffice to understand that the #include directive tells the compiler about what some of the following lines (line 5, in this case) are going to mean. What I mean is by using this line we are telling the compiler about what printf() on the 5th line is going to do.
 
 On the 3rd line we have a comment. Comments are useless for the compiler. They are only for the programmers. It is a good practice to write comments whenever you write a program. We’ll learn about comments a bit later in this tutorial itself. And then from line 4 through 7, we have the heart of our program, the main() function. The essence of the whole program lies in this block of code only. The program won’t run without a main function. But what is a main function, what is its “function” and why is it so important after all? To begin with, what is a function? So many questions! I will try to answer them as soon as I can. But first things first, where do we write the program and how do we compile it? Let me answer that first.
@@ -28,7 +30,9 @@ On the 3rd line we have a comment. Comments are useless for the compiler. They a
 + **Windows users** can easily write and compile a C program in IDEs like **TurboC++** or **DevC++**. **IDE or Integrated Development Environment** is a piece of software which consists of both a text-editor and a compiler so that unrelated tasks (writing the code and compiling it) can be conveniently performed. After writing the code, we have to save it with a .c extension and then run it.
 + **Linux users** have to first use a **text-editor like Vim or Atom** to write the code and save it with a **.c extension**. Let’s say we save it as file_name.c. Next step will be to open the **terminal** and type “`gcc file_name.c -o output`” without the quotes and press <kbd>Enter</kbd>. This will generate an executable called “output” which can be run by typing “`./output`” without the quotes and pressing <kbd>Enter</kbd>.
 
-Having answered that question, it is now time for some definitions. I have been constantly mentioning the term “compile” all over the place, never defining it though. I will do it now but that will require some more definitions. Let’s see what I mean.
+### The Compilation Process
+
+Having answered how to write you program and where to compile it, it is now time for some definitions. I have been constantly mentioning the term “compile” all over the place, never defining it though. I will do it now but that will require some more definitions. Let’s see what I mean.
 
 **High-level and Low-level or Assembly level language:** High-level language is one which we humans understand. The code we wrote above is in high-level language. You can pretty much guess what is happening around. But computers are really dumb. They don’t understand it. They only understand 1’s and 0’s. This is called machine-level language. Low-level language is one which is very closer to machine code where as high-level language is one closer to humans. So the closer a language gets to the machine the harder it becomes for humans to understand that and vice-versa.
 
