--- a/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
+++ b/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
@@ -90,10 +90,12 @@ For example, let’s try to add **00011101** (decimal 29) with **00100100** (dec
 
 This is just like normal addition. At first we add 1 with 0 to get 1 and carry 0. Then we add 0 with 0 to get 0 and carry 0. And then we add 1 with 1 and get 0 and carry 1 and so on. So we get 01000001 (decimal 65) as answer. Cool. Now, we can move our attention to negative numbers.
 
-Let’s discuss the three common ways of representing negative binary numbers in computer’s memory.
+### Representing negative numbers in binary
+
+Let’s discuss the three common ways of representing negative binary numbers in binary number system.
 
 
-#### 1. Signed magnitude:  
+#### Signed magnitude:
 
 The simplest way of representing negative binary numbers is called Signed Magnitude. You use the leftmost digit or the **Most Significant Bit (MSB)** as a sign indication, and treat the remaining bits as if they represent an unsigned integer. The convention is that if the MSB is 0 the number is positive, if it’s 1 the number is negative. Is that it? Isn’t that so simple? NO. There are a few problems associated with that. Let’s see them.  
 
@@ -104,7 +106,7 @@ But first, there’s just one thing to know. For 16-bit integers, the range is f
 These problems are certainly enough for us to discard this method of representation. The most important of all these problems is the problem of not being able to do binary arithmetic properly. Though this method of negative binary number representation was used in some very early computers, due to the difficulties posed by this method in doing binary arithmetic (which most computers do), other methods were invented.
 
 
-#### 2. One’s complement:
+#### One’s complement:
 
 **One’s Complement of a binary number is another binary number which, when added to the original number, will make the result a binary number with 1’s in all bits. To obtain one’s complement you simply need to flip all the bits.**
 
@@ -121,7 +123,7 @@ We can again say that the leftmost bit will determine the sign of the number. So
 So, we are not done yet, huh! Let’s have a look at the next method and see if we can solve these problems.
 
 
-#### 3. Two’s complement:
+#### Two’s complement:
 
 In the previous addition, if we look at the result and what the actual result ought to be, we can see that we are off by just 1 and we had to discard 1 at the leftmost bit. What if we add that carry with the remaining result? Let’s see.
 
@@ -144,6 +146,8 @@ Hence we can say that the original number was -12 which is indeed correct if we 
 ![image-4-8]({{ site.baseurl }}/images/posts/{{ page.serial }}/8_Problems_Solved_With_Twos_Complement.png)
 
 Hence, two’s complement it is! Most modern computers use this form of representation of negative binary numbers. Fianlly we can review the whole process of implementation of integers in computer’s memory just for the sake of completion.
+
+### How computers store integers
 
 As soon as we declare a variable of type “int” a 16-bit compiler allocates two contiguous blocks of memory (one byte each). For simplicity’s sake, let’s imagine the address of the first block of memory (1 byte) is 3000. Hence the next block will bear address 3001. Convert the decimal number number into a 16-bit binary number with the leftmost bit 0 if it is a positive number or take the two’s complement of the magnitude of the number if it is a negative number. The first 8 bits will go to address 3000 while the next 8 bits will go to address 3001.
 
