--- a/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
+++ b/_posts/c-tutorial-series/2017-06-03-1s-and-0s.md
@@ -62,7 +62,7 @@ Any decimal number can be easily converted into an equivalent binary number just
 
 The following graphic illustrates the process with an example of 454.
 
-![image-4-1]({{ site.baseurl }}/images/posts/{{ page.serial }}/1_Decimal_To_Binary.png)
+![image-4-1]({{ site.baseurl }}/images/posts/4_1_Decimal_To_Binary.png)
 
 I hope this makes it clear to you how we can convert a decimal number into its binary form. But, but, but! There’s one more thing. How do we get the decimal number back from here? Knowing that can help us verify if we got the correct binary number. So, let’s see that now. We know we can write 454 as
 
@@ -86,7 +86,7 @@ Though 16-bit compilers work with 16-bit (2 bytes) integers and 32-bit compilers
 
 For example, let’s try to add **00011101** (decimal 29) with **00100100** (decimal 36).
 
-![image-4-2]({{ site.baseurl }}/images/posts/{{ page.serial }}/2_Binary_Addition.png)
+![image-4-2]({{ site.baseurl }}/images/posts/4_2_Binary_Addition.png)
 
 This is just like normal addition. At first we add 1 with 0 to get 1 and carry 0. Then we add 0 with 0 to get 0 and carry 0. And then we add 1 with 1 and get 0 and carry 1 and so on. So we get 01000001 (decimal 65) as answer. Cool. Now, we can move our attention to negative numbers.
 
@@ -101,7 +101,7 @@ The simplest way of representing negative binary numbers is called Signed Magnit
 
 But first, there’s just one thing to know. For 16-bit integers, the range is from **-32768** (which is -2<sup>15</sup>) to **+32767** (which is +(2<sup>15</sup> - 1)) and for 16-bit integers, the range is from **-2147483648** (which is -2<sup>31</sup>) to **+2147483647** (which is +(2<sup>31</sup> - 1)). In fact this will be true for 8-bit integers too. The range will be from -128 (that is -2<sup>7</sup>) to +127 (that is +(2<sup>7</sup> - 1)).  
 
-![image-4-3]({{ site.baseurl }}/images/posts/{{ page.serial  }}/3_Problems_Of_Signed_Magnitude.png)
+![image-4-3]({{ site.baseurl }}/images/posts/4_3_Problems_Of_Signed_Magnitude.png)
 
 These problems are certainly enough for us to discard this method of representation. The most important of all these problems is the problem of not being able to do binary arithmetic properly. Though this method of negative binary number representation was used in some very early computers, due to the difficulties posed by this method in doing binary arithmetic (which most computers do), other methods were invented.
 
@@ -118,7 +118,7 @@ If we add the number and it’s one’s complement, the result would we get is 1
 
 We can again say that the leftmost bit will determine the sign of the number. So, 11101011 will be a negative number. Which number? Since it is the one’s complement of 20, it will represent -20. Since their addition gives 11111111 i.e., decimal -0 (since the MSB is 1, we know it is a negative number; so we take its one’s complement and the value returned will be the value of our number, 0 in this case). So adding 20 and -20 in binary gives -0, which kinda makes sense. Still there are problems.
 
-![image-4-4]({{ site.baseurl }}/images/posts/{{ page.serial }}/4_Problems_Of_Ones_Complement.png)
+![image-4-4]({{ site.baseurl }}/images/posts/4_4_Problems_Of_Ones_Complement.png)
 
 So, we are not done yet, huh! Let’s have a look at the next method and see if we can solve these problems.
 
@@ -127,23 +127,23 @@ So, we are not done yet, huh! Let’s have a look at the next method and see if 
 
 In the previous addition, if we look at the result and what the actual result ought to be, we can see that we are off by just 1 and we had to discard 1 at the leftmost bit. What if we add that carry with the remaining result? Let’s see.
 
-![image-4-5]({{ site.baseurl }}/images/posts/{{ page.serial }}/5_Change_From_Ones_Complement.png)
+![image-4-5]({{ site.baseurl }}/images/posts/4_5_Change_From_Ones_Complement.png)
 
 And our problem is solved now! You can try that with any other problem and you’ll see the problem is no longer there.
 
 **Two’s Complement of a binary number is another binary number which, when added to the original number, will make the result a binary number with 0’s in all bits. To obtain the two’s compliment of a number, we first find out its one’s compliment and then add 1 to it.**
 
-![image-4-6]({{ site.baseurl }}/images/posts/{{ page.serial }}/6_Twos_Complement.png)
+![image-4-6]({{ site.baseurl }}/images/posts/4_6_Twos_Complement.png)
 
 Here also, we know the sign of the number from the leftmost bit. If the leftmost bit is 0, the number is positive with the next 7 bits representing the magnitude. But if the leftmost bit is 1, we know it is negative. The magnitude can be determined by finding the magnitude of the two’s complement of the number.
 
 Now let us try to use this process and see if we can know the decimal form of the binary number 11110100.
 
-![image-4-7]({{ site.baseurl }}/images/posts/{{ page.serial }}/7_Twos_Complement_Of_Negative_Number.png)
+![image-4-7]({{ site.baseurl }}/images/posts/4_7_Twos_Complement_Of_Negative_Number.png)
 
 Hence we can say that the original number was -12 which is indeed correct if we look at the previous example and check. As is evident from all the examples, we have definitely solved our problem of binary addition (if you are not convinced try any problem on your own verify it). Now let’s see if two’s complement has helped us solve the other two problems.
 
-![image-4-8]({{ site.baseurl }}/images/posts/{{ page.serial }}/8_Problems_Solved_With_Twos_Complement.png)
+![image-4-8]({{ site.baseurl }}/images/posts/4_8_Problems_Solved_With_Twos_Complement.png)
 
 Hence, two’s complement it is! Most modern computers use this form of representation of negative binary numbers. Fianlly we can review the whole process of implementation of integers in computer’s memory just for the sake of completion.
 
@@ -153,10 +153,10 @@ As soon as we declare a variable of type “int” a 16-bit compiler allocates t
 
 The following graphic tries to explain the process. Remember this is just a simple representation.
 
-![image-4-9]({{ site.baseurl }}/images/posts/{{ page.serial }}/9_Memory_Map_Of_Positive_Number.png)
+![image-4-9]({{ site.baseurl }}/images/posts/4_9_Memory_Map_Of_Positive_Number.png)
 
 Similarly if we consider -454 it will look something like this.
 
-![image-4-10]({{ site.baseurl }}/images/posts/{{ page.serial }}/10_Memory_Map_Of_Negative_Number.png)
+![image-4-10]({{ site.baseurl }}/images/posts/4_10_Memory_Map_Of_Negative_Number.png)
 
 I hope now you are clear about the idea as to how the decimal integers, both positive and negative, are represented in binary form in computer’s memory. But we are not quite done with 1’s and 0’s. In the next tutorial, we’ll take up octal and hexa-decimal integers and see how they are converted to binary and we’ll also learn the use of modifiers. We will take up floating-point data type in the one after that and see how we can represent them in binary form to get an idea of their implementation in computer’s memory. So, stay tuned!
